Add statutory rules engine, attendance, RBAC, audit log, documents